vendor/cargo/auto_impl-0.5.0/tests/compile-fail/fn_associated_type.stderr
error: this trait cannot be auto-implemented for Fn-traits (only traits with exactly one method and no other items are allowed)
 --> $DIR/fn_associated_type.rs:5:1
  |
5 | trait Foo {
  | ^^^^^

error: the trait `Foo` cannot be auto-implemented for Fn-traits, because it has associated types

  = note: only traits with a single method can be implemented for Fn-traits

 --> $DIR/fn_associated_type.rs:6:5
  |
6 |     type Out;
  |     ^^^^
